<resources>
    <string name="app_name">Home Audio System</string>
    <string name="action_settings">Settings</string>
    <string name="newAlbum_hint">Album Name?</string>
    <string name="newAlbum_button">Add Album</string>
    <string name="albumSpinner_label">Album</string>
    <string name="artistSpinner_label">Artist</string>
    <string name="newArtist_hint">Artist name?</string>
    <string name="newArtist_button">Add Artist</string>
    <string name="albumGenreSpinnerLabel">Genre</string>
    <string name="newAlbumDate_hint">Release Date</string>
    <string name="newAlbum_date_label">Date</string>
    <string name="newAlbum_date">01-01-2016</string>
    <string name="newSong_duration">00:00</string>
    <string name="newSong_hint">Song name?</string>
</resources>
