<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="ca.mcgill.ecse321.homeaudiosystem.MainActivity"
    tools:showIn="@layout/activity_main">

    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=" "
            android:textColor="#FF69B4"
            android:id="@+id/errormessage"/>

         <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/newArtist_name"
            android:hint="@string/newArtist_hint"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/newArtist_button"
            android:layout_gravity="end"
            android:onClick="addArtist"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_height="wrap_content"
            android:layout_width="match_parent">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/newAlbum_name"
                android:hint="@string/newAlbum_hint" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_height="wrap_content"
                android:layout_width="match_parent">
                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/newAlbum_date_label"/>

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/newAlbum_date"
                    android:layout_gravity="end"
                    android:id="@+id/newAlbum_date"
                    android:onClick="showDatePickerDialog"/>

            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/artistSpinner_label"/>

                <Spinner
                    android:layout_height="match_parent"
                    android:layout_width="wrap_content"
                    android:id="@+id/artistSpinner"
                    android:layout_weight="1" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/newAlbum_genre"
                    android:text="@string/albumGenreSpinnerLabel"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/albumGenreSpinner"
                    android:layout_weight="1">
                </Spinner>

            </LinearLayout>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newAlbum_button"
                android:layout_gravity="end"
                android:onClick="addAlbum" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation = "vertical">

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id= "@+id/addSong_Name"
                android:hint ="@string/newSong_hint"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text = "Song duration:"
                    android:layout_weight="1"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/newSong_duration"
                    android:layout_gravity="end"
                    android:id="@+id/addSong_duration"
                    android:onClick="showTimePickerDialog"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height = "wrap_content"
                    android:id = "@+id/newSong_position"
                    android:text="Song Position:"
                    android:layout_weight ="1"/>

                 <EditText
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:id = "@+id/songposition_hint"
                     android:hint= "       " />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height = "wrap_content"
                    android:text="Album:"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:id="@+id/albumNameSpinner"
                    android:layout_weight= "1">
                </Spinner>
            </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Add Song"
                    android:layout_gravity = "end"
                    android:onClick= "addSong"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
                android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight ="1">

                <EditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:id = "@+id/newplaylist_hint"
                    android:hint = "Playlist name?"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text = "Add Playlist"
                    android:onClick="addPlaylist"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight ="1">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id = "@+id/newlocation_hint"
                        android:hint = "Location?"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Add Location"
                        android:onClick="addLocation"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight ="1">

                    <EditText
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:id = "@+id/newplayer_hint"
                        android:hint = "Player name?"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Add Player"
                        android:onClick="addPlayer"/>
                </LinearLayout>


            </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation = "vertical">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text = "Select Playlist"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id= "@+id/playlist_spinner"
                            android:layout_weight="1"/>
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Select Song"/>

                        <Spinner
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:id = "@+id/song_spinner"
                            android:layout_weight= "1"/>
                    </LinearLayout>

                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text ="Add Song to Playlist"
                            android:onClick="addSongToPlaylist"
                            android:layout_gravity = "end"/>
                </LinearLayout>

        </LinearLayout>

              <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation= "vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Select Location"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id= "@+id/location_spinner"
                        android:layout_weight="1"/>

                    <SeekBar
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/seekBar"
                        android:layout_below="@+id/dimension_text"/>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text = "Select player"/>

                    <Spinner
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:id= "@+id/player_spinner"
                        android:layout_weight="1"/>
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text= "Play Now"
                    android:onClick="addPlayer"
                    android:layout_gravity="end"/>

            </LinearLayout>

    </ScrollView>

</RelativeLayout>
